--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
     display: flex;
     align-items: flex-start;
     flex-direction: column;
-    margin-left: 9rem;
+    margin-left: 11rem;
 }
 
 .commands-2 ul {
@@ -49,4 +49,14 @@
 }
 .commands h3  {
     background-color: #000;
+}
+
+@media screen and (min-width: 414px) {
+    .commands ul {
+        margin-left: 4rem;
+    }
+    .commands h2 {
+        position: relative;
+        text-align: center;
+    }
 }
