--- a/style.css
+++ b/style.css
@@ -46,3 +46,20 @@
 .commands-2 ul {
     margin-left: 7rem;
 }
+
+@media screen and (max-width: 565px){
+    .commands-1 h2 {
+        position: relative;
+        text-align: center;
+    }
+    .commands-1 ul {
+        margin: 0 auto;
+    }
+    .commands-2 h2 {
+        position: relative;
+        text-align: center;
+    }
+    .commands-2 ul {
+        margin: 0 auto;
+    }
+}
